--- a/sp500.ipynb
+++ b/sp500.ipynb
@@ -7186,6 +7186,15 @@
     "\n",
     "stats_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 512,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_df.to_csv(\"Stats.csv\")"
+   ]
   }
  ],
  "metadata": {
